# PMC

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.cpp
Game/: GameSettings.cpp  GameSettings.h  Input.cpp  Input.h  MatchState.h  UserInterface.cpp  UserInterface.h
Game/Board/: Board.cpp  Board.h  Shape3D.cpp  Shape3D.h  Tile.cpp  Tile.h
Game/Board/Levels/: Level.cpp  Level.h
Game/Objects/Units/: UnitBase.cpp  UnitBase.h
Game/Objects/Weapons/: Grenade.cpp  Grenade.h  Rifle.cpp  Rifle.h  Shotgun.cpp  Shotgun.h  WeaponBase.cpp  WeaponBase.h
Game/Pathfinding/: Pathfinding.cpp  Pathfinding.h
Game/Vision/: Vision.cpp  Vision.h
Networking/: Client.h  ISession.h  Network.cpp  Network.h
SquadBuilder/: SquadIO.cpp  SquadIO.h  squad.txt
StateMachine/: Game.cpp  Game.h  Lobby.cpp  Lobby.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h  Squad.cpp  Squad.h  State.h
Support/: ActionHandler.cpp  ActionHandler.h  Button.cpp  Button.h  MathHelper.cpp  MathHelper.h  PacketTypes.h
